added needed JDK-17 (--add-opens) stmts to surefile properties